adjust margins and apply spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,23 +3,50 @@ body{
   text-align: center;
 }
 img {
-    border: 4px lightcoral;
+    border: 4px solid lightcoral;
     border-radius: 50%;
-    width: 30vw;
+    width: 20vw;
+    padding: 3px;
+    float: center;
+    margin:0 auto;
 }
-.before {
-  width: 30vw;
-  float: left;
-  margin-bottom: 66%;
+.top {
+  width: 90vw;
+  margin:0 auto;
+  background-color: rgba(146, 37, 37, 0.616);
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.315);
+  display: flex;
+  border-radius: 45%;
 }
 .middle {
-  width: 30vw;
-  float: center;
-  margin-left: 33%;
-  margin-top: 25%;
+  width: 90vw;
+  margin:0 auto;
+  background-color: rgba(146, 37, 37, 0.616);
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.315);
+  display: flex;
+  border-radius: 45%;
 }
-.after {
-  width: 30vw;
-  float: top right;
-  margin-left: 66%;
+.bottom {
+  width: 90vw;
+  margin:0 auto;
+  background-color: rgba(146, 37, 37, 0.616);
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.315);
+  display: flex;
+  border-radius: 45%;
+}
+.header {
+  border: 4px solid  lightcoral;
+  border-radius: 50%;
+  padding: 5px;
+  background-color: rgba(146, 37, 37, 0.616);
+  margin-left: 20%;
+  margin-right: 20%;
+  font-family: Georgia;
+  color: darkslateblue;
+}
+.container {
+  max-width: 1170px;
+  width: 100%;
+  margin:0 auto;
+  float: center;
 }
